fixed the card-alignment error

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  justify-self: center;
 
   &__image {
     height: 20rem;
